--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@po-ui/ng-components": "^5.2.0",
     "@po-ui/ng-templates": "^5.2.0",
     "jwt-decode": "^3.1.2",
+    "pdfmake": "^0.1.71",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
